jvimalprasathdev/src/objects/RRB_Queue_Member__c.object
<CustomObject>
    <fields>
        <fullName>Queue_member_proficiency__c</fullName>
        <label>Queue member proficiency</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RRB_Queue_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RRB Queue Matrix</label>
        <referenceTo>RRB_Queue_Matrix__c</referenceTo>
        <relationshipLabel>RRB Queue Members</relationshipLabel>
        <relationshipName>RRB_Queue_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RRB_Queue_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RRB Queue Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Queue_member_proficiency__c</columns>
        <columns>User__c</columns>
        <columns>RRB_Queue_Matrix__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RRB Queue Members  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RRB Queue Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Queue_Members_Proficiency_cannot_be_0</fullName>
        <active>true</active>
        <errorConditionFormula>Queue_member_proficiency__c == 0</errorConditionFormula>
        <errorDisplayField>Queue_member_proficiency__c</errorDisplayField>
        <errorMessage>Queue Member&apos;s Proficiency cannot be Zero</errorMessage>
    </validationRules>
</CustomObject>